--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -24,7 +24,6 @@
 }
 
 .qualification__icon {
-  font-size: 1.8rem;
   margin-right: var(--mb-0-25);
 }
 
@@ -65,6 +64,10 @@
 
 .qualification__calender {
   font-size: var(--small-font-size);
+}
+.qualification__calender-icon {
+  font-size: 1rem;
+  margin: 0px 3px -3px 0px;
 }
 
 .qualification__rounder {
